# Database-coursework

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
src/: api.py  config.py  db_manager.py  main.py
